Implement settings management and add field rotation feature

--- a/MotionView/src/index.html
+++ b/MotionView/src/index.html
@@ -136,6 +136,15 @@
             </select>
           </div>
           <div>
+            <label>Field rotation</label>
+            <select id="settingsFieldRotation">
+              <option value="0">0°</option>
+              <option value="90">90°</option>
+              <option value="180">180°</option>
+              <option value="270">270°</option>
+            </select>
+          </div>
+          <div>
             <label>Robot size (inches on field)</label>
             <div class="grid2">
               <input id="settingsRobotW" type="number" step="1" value="12" />
