Made app re-open where it closed, started README, and added image transparency field

--- a/MotionView/src/index.html
+++ b/MotionView/src/index.html
@@ -128,6 +128,10 @@
               <label>Img Rot (°)</label>
               <input id="settingsRobotImgRot" type="number" step="1" value="0" />
             </div>
+            <div>
+              <label>Img Opacity</label>
+              <input id="settingsRobotImgAlpha" type="number" step="1" min="0" max="100" value="100" />
+            </div>
           </div>
         </div>
       </div>
