Added images and updated main README content

--- a/MotionView/src/index.html
+++ b/MotionView/src/index.html
@@ -427,7 +427,7 @@
             <select id="leftRefreshInterval" aria-label="Refresh interval">
               <option value="0">off</option>
               <option value="100">100ms</option>
-              <option value="121">121ms (SFX HZ)</option>
+              <option value="121">121ms (MVLib HZ)</option>
               <option value="250">250ms</option>
               <option value="500" selected>500ms</option>
               <option value="1000">1s</option>
